# supacrypt-pkcs11

./: .editorconfig  .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  build.ps1  build.sh
.github/workflows/: build-test.yml  ci.yml  test.yml
benchmarks/: CMakeLists.txt
cmake/: CompilerOptions.cmake  Dependencies.cmake  Installation.cmake  Packaging.cmake  Platform.cmake  ProtoGeneration.cmake  supacrypt-pkcs11-config.cmake.in
docs/: api-reference.md  troubleshooting.md  user-guide.md
docs/examples/: CMakeLists.txt  basic_usage.cpp
docs/installation/: linux.md
examples/: CMakeLists.txt
include/: CMakeLists.txt
include/supacrypt/pkcs11/: pkcs11.h  supacrypt_pkcs11.h
src/: CMakeLists.txt
src/core/: object_cache.cpp  object_cache.h  pkcs11_crypto.cpp  pkcs11_init.cpp  pkcs11_key.cpp  pkcs11_mechanism.cpp  pkcs11_object.cpp  pkcs11_session.cpp  session_state.cpp  session_state.h  state_manager.cpp  state_manager.h
src/grpc/: circuit_breaker.cpp  circuit_breaker.h  grpc_client.cpp  grpc_connection_pool.cpp  grpc_connection_pool.h
src/observability/: metrics.cpp  tracing.cpp
src/security/: certificate_manager.cpp  secure_memory.cpp
src/utils/: error_mapping.cpp  error_mapping.h  logging.cpp  logging.h
tests/: CMakeLists.txt
tests/benchmarks/: benchmark_main.cpp  pkcs11_benchmarks.cpp
tests/compliance/: test_pkcs11_compliance.cpp
tests/fuzzing/: fuzz_pkcs11.cpp
tests/integration/: test_backend_fixture.cpp  test_backend_operations.cpp  test_e2e_operations.cpp  test_grpc_connection.cpp  test_main.cpp
tests/platform/: test_macos.cpp  test_main.cpp
tests/unit/: mock_grpc_backend.cpp  mock_grpc_backend.h  test_crypto_operations.cpp  test_error_handling.cpp  test_key_management.cpp  test_main.cpp  test_pkcs11_init.cpp  test_session_management.cpp  test_session_state.cpp  test_state_manager.cpp
